--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently -n 🚀,🌳 'npm:server:dev' 'npm:elm:dev'",
     "server:dev": "nodemon -w src -w dist -e js,gql src/index.js",
     "elm:build": "elm make src/Worker.elm --output=dist/elm.worker.js",
-    "elm:dev": "chokidar src/**/*.elm --initial true -c 'npm run elm:build'"
+    "elm:dev": "chokidar src --initial true -c 'npm run elm:build'"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,8 @@
     "concurrently": "7.0.0",
     "elm": "0.19.1-5",
     "graphql": "16.3.0",
-    "nodemon": "2.0.15"
+    "nodemon": "2.0.15",
+    "sqlite": "4.0.25",
+    "sqlite3": "5.0.2"
   }
 }
