--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@louislam/sqlite3": "6.0.1",
     "apollo-server": "3.6.4",
     "apollo-server-core": "3.6.4",
     "chokidar-cli": "3.0.0",
@@ -21,7 +22,6 @@
     "elm": "0.19.1-5",
     "graphql": "16.3.0",
     "nodemon": "2.0.15",
-    "sqlite": "4.0.25",
-    "sqlite3": "5.0.2"
+    "sqlite": "4.0.25"
   }
 }
